Alterando o tipo do campo cpf

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="field">
                     <label>CPF</label>
-                    <input placeholder="Password ex: 56666987451" type="number" id="cpf">
+                    <input placeholder="Password ex: 56666987451" type="" id="cpf">
                 </div>
             </div>
 
